# axum-template

./: Cargo.toml  README.md  docker-compose.yml  example.env  postman_collection.json
api/src/route/: mod.rs  post.rs
migration/src/: m20220120_000001_create_post_table.rs
service/: Cargo.toml
service/src/: lib.rs  post.rs
service/src/dto/: post.rs
