[package]
name = "service"
version = "0.0.1"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.sea-orm]
version = "0.12.15"
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt"] }
